# codex_kanban

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.codex/: README.md
.codex/agents/: api-contract-steward.toml  architecture-impact-analyst.toml  domain-model-steward.toml  kanban-auditor.toml  project-architect.toml  project-implementer.toml  project-release-manager.toml  project-reviewer.toml  test-strategist.toml
.codex/skills/codex-kanban/: SKILL.md
.github/workflows/: ci.yml
docs/: codex-kanban.md  public-release.md
kanban_server/: __init__.py  app_metadata.py  git_worktrees.py  hook.py  ingest.py  live.py  server.py
kanban_server/project/: api.py  cli.py  commands.py  due.py  git_ops.py  payloads.py  registration.py
kanban_server/static/: app.js  app_api.js  app_model.js  app_state.js  cards.css  dialogs.css  index.html  sidebar.css  styles.css
kanban_server/store/: __init__.py  archival.py  cards.py  contracts.py  core.py  dependencies.py  events.py  overview.py  participants.py  projects.py  schema.py  serialization.py  support.py  workflows.py
tests/: project_cli_support.py  store_project_support.py  test_git_worktrees.py  test_hook.py  test_packaging.py  test_project_cli.py  test_project_cli_overview.py  test_project_cli_workflows.py  test_public_entrypoints.py  test_server.py  test_snapshot_scaling.py  test_static_assets.py  test_store.py  test_store_agent_runtime.py  test_store_concurrency.py  test_store_project_cards.py  test_store_project_coordination.py  test_worktree_cleanup.py
(+6 files in other folders)
